--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mapserver.lvn"
+    package="com.mapserverframework.lvn"
     android:versionCode="1"
     android:versionName="1.0" >
     
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.mapserver.lvn.MainActivity"
+            android:name="com.mapserverframework.lvn.MainActivity"
             android:label="@string/app_name" 
             android:configChanges="orientation|screenSize|keyboardHidden">
             <intent-filter>
